--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,6 +30,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'androidx.annotation:annotation:1.1.0'
 }
   
